# traffic_simulation

./: CMakeLists.txt  README.md
src/: Intersection.cpp  Intersection.h  Street.cpp  Street.h  TrafficLight.cpp  TrafficLight.h  TrafficObject.cpp  TrafficObject.h  Vehicle.cpp  Vehicle.h  main.cpp
